syntax = "proto3";

package onboarding;

option go_package = "github.com/noorshaik95/slate/proto/onboarding";

import "google/protobuf/timestamp.proto";

// OnboardingService handles bulk user onboarding operations
service OnboardingService {
  // Job Management
  rpc CreateJob(CreateJobRequest) returns (CreateJobResponse);
  rpc GetJob(GetJobRequest) returns (GetJobResponse);
  rpc ListJobs(ListJobsRequest) returns (ListJobsResponse);
  rpc CancelJob(CancelJobRequest) returns (CancelJobResponse);
  rpc RetryJob(RetryJobRequest) returns (RetryJobResponse);

  // Task Management
  rpc GetTask(GetTaskRequest) returns (GetTaskResponse);
  rpc ListTasks(ListTasksRequest) returns (ListTasksResponse);
  rpc RetryTask(RetryTaskRequest) returns (RetryTaskResponse);

  // Bulk Operations
  rpc UploadCSV(UploadCSVRequest) returns (UploadCSVResponse);
  rpc ProcessBatch(ProcessBatchRequest) returns (ProcessBatchResponse);

  // Integration Management
  rpc CreateIntegrationConfig(CreateIntegrationConfigRequest) returns (CreateIntegrationConfigResponse);
  rpc GetIntegrationConfig(GetIntegrationConfigRequest) returns (GetIntegrationConfigResponse);
  rpc ListIntegrationConfigs(ListIntegrationConfigsRequest) returns (ListIntegrationConfigsResponse);
  rpc UpdateIntegrationConfig(UpdateIntegrationConfigRequest) returns (UpdateIntegrationConfigResponse);
  rpc DeleteIntegrationConfig(DeleteIntegrationConfigRequest) returns (DeleteIntegrationConfigResponse);
  rpc SyncIntegration(SyncIntegrationRequest) returns (SyncIntegrationResponse);

  // Audit & Reporting
  rpc GetAuditLogs(GetAuditLogsRequest) returns (GetAuditLogsResponse);
  rpc ExportData(ExportDataRequest) returns (ExportDataResponse);

  // Health Check
  rpc Health(HealthRequest) returns (HealthResponse);
}

// ===== Job Messages =====

message CreateJobRequest {
  string tenant_id = 1;
  string name = 2;
  string description = 3;
  string source_type = 4; // csv, ldap, saml, google, microsoft, api
  string source_reference = 5;
  string created_by = 6;
  repeated UserData users = 7; // For direct API submission
}

message CreateJobResponse {
  string job_id = 1;
  string status = 2;
  string message = 3;
}

message GetJobRequest {
  string job_id = 1;
  string tenant_id = 2;
}

message GetJobResponse {
  Job job = 1;
}

message ListJobsRequest {
  string tenant_id = 1;
  string status = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message ListJobsResponse {
  repeated Job jobs = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message CancelJobRequest {
  string job_id = 1;
  string tenant_id = 2;
  string cancelled_by = 3;
}

message CancelJobResponse {
  bool success = 1;
  string message = 2;
}

message RetryJobRequest {
  string job_id = 1;
  string tenant_id = 2;
  bool retry_failed_only = 3;
}

message RetryJobResponse {
  bool success = 1;
  string message = 2;
  int32 tasks_retried = 3;
}

message Job {
  string id = 1;
  string tenant_id = 2;
  string name = 3;
  string description = 4;
  string source_type = 5;
  string source_reference = 6;
  string status = 7;
  int32 total_users = 8;
  int32 processed_users = 9;
  int32 successful_users = 10;
  int32 failed_users = 11;
  string error_summary = 12; // JSON string
  string created_by = 13;
  google.protobuf.Timestamp started_at = 14;
  google.protobuf.Timestamp completed_at = 15;
  google.protobuf.Timestamp created_at = 16;
  google.protobuf.Timestamp updated_at = 17;
  JobProgress progress = 18;
}

message JobProgress {
  string current_stage = 1;
  double progress_percentage = 2;
  google.protobuf.Timestamp estimated_completion_time = 3;
  string current_task_id = 4;
  string metrics = 5; // JSON string
}

// ===== Task Messages =====

message GetTaskRequest {
  string task_id = 1;
  string tenant_id = 2;
}

message GetTaskResponse {
  Task task = 1;
}

message ListTasksRequest {
  string job_id = 1;
  string tenant_id = 2;
  string status = 3;
  int32 page = 4;
  int32 page_size = 5;
}

message ListTasksResponse {
  repeated Task tasks = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message RetryTaskRequest {
  string task_id = 1;
  string tenant_id = 2;
}

message RetryTaskResponse {
  bool success = 1;
  string message = 2;
}

message Task {
  string id = 1;
  string job_id = 2;
  string tenant_id = 3;
  string email = 4;
  string first_name = 5;
  string last_name = 6;
  string role = 7;
  string student_id = 8;
  string department = 9;
  repeated string course_codes = 10;
  int32 graduation_year = 11;
  string phone = 12;
  string preferred_language = 13;
  string custom_fields = 14; // JSON string
  string status = 15;
  string user_id = 16;
  int32 retry_count = 17;
  string error_message = 18;
  string error_details = 19; // JSON string
  google.protobuf.Timestamp created_at = 20;
  google.protobuf.Timestamp updated_at = 21;
  google.protobuf.Timestamp processed_at = 22;
}

// ===== User Data =====

message UserData {
  string email = 1;
  string first_name = 2;
  string last_name = 3;
  string role = 4;
  string student_id = 5;
  string department = 6;
  repeated string course_codes = 7;
  int32 graduation_year = 8;
  string phone = 9;
  string preferred_language = 10;
  map<string, string> custom_fields = 11;
}

// ===== CSV Upload =====

message UploadCSVRequest {
  string tenant_id = 1;
  string filename = 2;
  bytes file_content = 3;
  string created_by = 4;
  bool validate_only = 5;
}

message UploadCSVResponse {
  string job_id = 1;
  int32 total_rows = 2;
  int32 valid_rows = 3;
  int32 invalid_rows = 4;
  repeated ValidationError validation_errors = 5;
  string message = 6;
}

message ValidationError {
  int32 row_number = 1;
  string field = 2;
  string error = 3;
  string value = 4;
}

// ===== Batch Processing =====

message ProcessBatchRequest {
  string tenant_id = 1;
  repeated UserData users = 2;
  string created_by = 3;
  string source_type = 4;
}

message ProcessBatchResponse {
  string job_id = 1;
  int32 total_users = 2;
  string message = 3;
}

// ===== Integration Config =====

message CreateIntegrationConfigRequest {
  string tenant_id = 1;
  string integration_type = 2;
  string name = 3;
  string config = 4; // JSON string
}

message CreateIntegrationConfigResponse {
  string config_id = 1;
  string message = 2;
}

message GetIntegrationConfigRequest {
  string config_id = 1;
  string tenant_id = 2;
}

message GetIntegrationConfigResponse {
  IntegrationConfig config = 1;
}

message ListIntegrationConfigsRequest {
  string tenant_id = 1;
  string integration_type = 2;
}

message ListIntegrationConfigsResponse {
  repeated IntegrationConfig configs = 1;
}

message UpdateIntegrationConfigRequest {
  string config_id = 1;
  string tenant_id = 2;
  string name = 3;
  string config = 4; // JSON string
  bool is_active = 5;
}

message UpdateIntegrationConfigResponse {
  bool success = 1;
  string message = 2;
}

message DeleteIntegrationConfigRequest {
  string config_id = 1;
  string tenant_id = 2;
}

message DeleteIntegrationConfigResponse {
  bool success = 1;
  string message = 2;
}

message SyncIntegrationRequest {
  string config_id = 1;
  string tenant_id = 2;
  string triggered_by = 3;
}

message SyncIntegrationResponse {
  string job_id = 1;
  string message = 2;
}

message IntegrationConfig {
  string id = 1;
  string tenant_id = 2;
  string integration_type = 3;
  string name = 4;
  string config = 5; // JSON string (sanitized for response)
  bool is_active = 6;
  google.protobuf.Timestamp last_sync_at = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

// ===== Audit Logs =====

message GetAuditLogsRequest {
  string tenant_id = 1;
  string job_id = 2;
  string task_id = 3;
  string event_type = 4;
  google.protobuf.Timestamp start_date = 5;
  google.protobuf.Timestamp end_date = 6;
  int32 page = 7;
  int32 page_size = 8;
}

message GetAuditLogsResponse {
  repeated AuditLog logs = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message AuditLog {
  string id = 1;
  string tenant_id = 2;
  string job_id = 3;
  string task_id = 4;
  string event_type = 5;
  string event_data = 6; // JSON string
  string performed_by = 7;
  string ip_address = 8;
  string user_agent = 9;
  google.protobuf.Timestamp created_at = 10;
}

// ===== Export =====

message ExportDataRequest {
  string tenant_id = 1;
  string export_type = 2; // jobs, tasks, audit_logs
  string format = 3; // csv, json, xlsx
  google.protobuf.Timestamp start_date = 4;
  google.protobuf.Timestamp end_date = 5;
  repeated string job_ids = 6;
}

message ExportDataResponse {
  string download_url = 1;
  string file_path = 2;
  int32 record_count = 3;
  string message = 4;
}

// ===== Health Check =====

message HealthRequest {}

message HealthResponse {
  string status = 1;
  string version = 2;
  map<string, string> dependencies = 3;
}
